--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-refresh": "^0.8.3",
     "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
+    "react-tabs": "^3.1.2",
     "redux": "^4.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
