--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "^13.0.0",
+    "react-cookie": "^4.0.3",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
