--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "5.0.2",
     "prompts": "2.4.0",
+    "rc-progress": "^3.1.3",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "^13.0.0",
