--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-router-dom": "^5.2.0",
     "react-tabs": "^3.1.2",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "8.0.2",
