--- a/package.json
+++ b/package.json
@@ -59,7 +59,9 @@
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-responsive": "^8.2.0",
+    "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
+    "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
