--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "^13.0.0",
+    "react-burger-menu": "^3.0.3",
     "react-cookie": "^4.0.3",
     "react-country-region-selector": "^3.0.2",
     "react-dev-utils": "^11.0.1",
@@ -67,8 +68,8 @@
     "react-responsive": "^8.2.0",
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
-    "react-tooltip": "^4.2.13",
     "react-tabs": "^3.1.2",
+    "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "resolve": "1.18.1",
