--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-responsive": "^8.2.0",
     "react-responsive-modal": "^6.0.1",
     "react-router-dom": "^5.2.0",
+    "react-select": "^4.2.1",
     "react-tabs": "^3.1.2",
     "react-tooltip": "^4.2.13",
     "redux": "^4.0.5",
