--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.20",
     "mini-css-extract-plugin": "0.11.3",
     "moment": "^2.29.1",
