--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_ENV_API=http://api.powerplaysystems.com
+# REACT_APP_API_URL=http://api.powerplaysystems.com
+REACT_APP_API_URL=http://localhost:4000
