--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-# REACT_APP_API_URL=http://api.powerplaysystems.com
-REACT_APP_API_URL=http://localhost:4000
+REACT_APP_API_URL=http://api.powerplaysystems.com
