--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-redux": "^7.2.2",
     "react-refresh": "^0.8.3",
     "react-responsive": "^8.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-router-dom": "^5.2.0",
     "react-tabs": "^3.1.2",
     "react-tooltip": "^4.2.13",
