ZUMM and fixer are working

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=https://api.powerplaysystems.com
+REACT_APP_API_URL=http://localhost:4000
 
 REACT_APP_IPAY_WEBHOOK_URL=webhook here
 
@@ -10,3 +10,6 @@ REACT_APP_CREDIT_CARD_WALLET=9cbd75ed-a0dd-4155-a363-c807fdd41be1
 REACT_APP_ZUM_API=https://api-sandbox.zumrails.com
 REACT_APP_ZUM_USERNAME=john.house@powerplaysystems.com
 REACT_APP_ZUM_PASSWORD=7nEuVAsfD39ZzEb
+
+REACT_APP_FIXER_KEY=fa3628fdfda5d5a96c1b5279ff862d37
+REACT_APP_FIXER_API_URL=https://data.fixer.io
