--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-REACT_APP_API_URL=http://localhost:4000
+REACT_APP_API_URL=https://api.powerplaysystems.com/
 
 REACT_APP_IPAY_WEBHOOK_URL=webhook here
 
